# test-suite

./: .gitignore  CMakeLists.txt  lit.site.cfg.in
Correctness/Polybench-32/: CMakeLists.txt
Correctness/Polybench-32/datamining/correlation/: correlation.reference_output
Correctness/Polybench-32/datamining/covariance/: covariance.reference_output
Correctness/Polybench-32/linear-algebra/: CMakeLists.txt
Correctness/Polybench-32/linear-algebra/kernels/: CMakeLists.txt
Correctness/Polybench-32/linear-algebra/kernels/2mm/: 2mm.reference_output
Correctness/Polybench-32/linear-algebra/kernels/3mm/: 3mm.reference_output
Correctness/Polybench-32/linear-algebra/kernels/atax/: atax.reference_output
Correctness/Polybench-32/linear-algebra/kernels/bicg/: bicg.reference_output
Correctness/Polybench-32/linear-algebra/kernels/cholesky/: cholesky.c  cholesky.reference_output
Correctness/Polybench-32/linear-algebra/kernels/doitgen/: doitgen.reference_output
Correctness/Polybench-32/linear-algebra/kernels/gemm/: gemm.reference_output
Correctness/Polybench-32/linear-algebra/kernels/gemver/: gemver.reference_output
Correctness/Polybench-32/linear-algebra/kernels/gesummv/: gesummv.reference_output
Correctness/Polybench-32/linear-algebra/solvers/: CMakeLists.txt
Correctness/Polybench-32/medley/: CMakeLists.txt
Correctness/Polybench-32/medley/floyd-warshall/: floyd-warshall.reference_output
Correctness/Polybench-32/medley/reg_detect/: reg_detect.reference_output
Correctness/Polybench-32/stencils/: CMakeLists.txt
Correctness/Polybench-32/stencils/adi/: adi.reference_output
Correctness/Polybench-32/stencils/fdtd-2d/: fdtd-2d.reference_output
Correctness/Polybench-32/stencils/fdtd-apml/: fdtd-apml.reference_output
Correctness/Polybench-32/stencils/jacobi-1d-imper/: jacobi-1d-imper.reference_output
Correctness/Polybench-32/stencils/jacobi-2d-imper/: jacobi-2d-imper.reference_output
Performance/Polybench-421/: CMakeLists.txt
Performance/Polybench-421-boost/utilities/: CMakeLists.txt  polybench.h
Performance/Polybench-421/datamining/correlation/: CMakeLists.txt  correlation.c
Performance/Polybench-421/datamining/covariance/: covariance.c
Performance/Polybench-421/delicm/: CMakeLists.txt
Performance/Polybench-421/delicm/columnwisesum/: columnwisesum.c  columnwisesum.h
Performance/Polybench-421/delicm/rowwisesum/: CMakeLists.txt  rowwisesum.c
Performance/Polybench-421/medley/deriche/: CMakeLists.txt  deriche.c
Performance/Polybench-421/medley/floyd-warshall/: CMakeLists.txt  floyd-warshall.c
Performance/Polybench-421/medley/nussinov/: CMakeLists.txt
Performance/Polybench-421/stencils/adi/: CMakeLists.txt
Performance/Polybench-421/stencils/fdtd-2d/: CMakeLists.txt  fdtd-2d.c
Performance/Polybench-421/stencils/heat-3d/: CMakeLists.txt  heat-3d.c
Performance/Polybench-421/stencils/jacobi-1d/: CMakeLists.txt  jacobi-1d.c  jacobi-1d.h
Performance/Polybench-421/stencils/jacobi-2d/: CMakeLists.txt  jacobi-2d.c
Performance/Polybench-421/stencils/seidel-2d/: CMakeLists.txt  seidel-2d.c
Performance/Polybench-421/utilities/: unistd.h
Polybench/: CMakeLists.txt
SingleSource/Benchmarks/Polybench-42/: CMakeLists.txt
SingleSource/Benchmarks/Polybench-42/delicm/: CMakeLists.txt  rowwisesum.c
SingleSource/Benchmarks/Polybench-42/utilities/: polybench.c  polybench.h
(+406 files in other folders)
