set(POLYBENCH_SOURCE_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
list(APPEND CFLAGS -I ${POLYBENCH_SOURCE_ROOT}/utilities -DPOLYBENCH_DUMP_ARRAYS)
if(DEFINED SMALL_PROBLEM_SIZE)
  list(APPEND CFLAGS -DSMALL_DATASET)
endif()
list(APPEND LDFLAGS -lm)
set(POLYBENCH_PREFIX 42)
add_subdirectory(datamining)
add_subdirectory(linear-algebra) 
add_subdirectory(medley)
add_subdirectory(stencils)
add_subdirectory(delicm)
