add_subdirectory(2mm)
add_subdirectory(3mm)
add_subdirectory(atax)
add_subdirectory(bicg)
add_subdirectory(cholesky)
add_subdirectory(doitgen)
add_subdirectory(gemm)
add_subdirectory(gemver)
add_subdirectory(gesummv)
add_subdirectory(mvt)
add_subdirectory(symm)
add_subdirectory(syr2k)
add_subdirectory(syrk)
add_subdirectory(trisolv)
add_subdirectory(trmm)
